adapt all test cases

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e54596f1-61d6-4704-90de-a405f8fe6b00",
    "metadata": {},
    "outputs": [],
@@ -49,35 +49,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cad_width cannot be samller than 750\n",
-      "right\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "name = \"boxes\"\n",
     "cv = show(    \n",
     "    objects[name], \n",
-    "    reset_camera=\"reset\",\n",
     "    glass=True,\n",
+    "    tools=True,\n",
+    "    grid=(True, False, True),\n",
     "    title=\"CVW 1\",\n",
     "    anchor=\"right\",\n",
-    "    cad_width=700\n",
+    "    height=500,\n",
+    "    cad_width=700,\n",
+    "    debug=True,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6871a8de-a3d5-4dc6-8569-ac2c69087f89",
+   "id": "2d1aede2-8f9b-4f0e-9be2-662fa06abfde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# theme=OK,\n",
+    "# glass=OK,\n",
+    "# tools=OK,\n",
+    "# pinning=OK,\n",
+    "#     #\n",
+    "#     # render options\n",
+    "# normal_len=OK,\n",
+    "# default_edgecolor=OK,\n",
+    "# default_opacity=OK,\n",
+    "# ambient_intensity=OK,\n",
+    "# direct_intensity=OK,\n",
+    "# metalness=OK,\n",
+    "# roughness=OK,\n",
+    "#     #\n",
+    "#     # add_shapes options\n",
+    "# up=OK,\n",
+    "# control=OK,\n",
+    "# ortho=OK,\n",
+    "# axes=OK,\n",
+    "# axes0=OK,\n",
+    "# grid=OK,\n",
+    "# center_grid=OK,\n",
+    "# explode=OK,\n",
+    "# ticks=OK,\n",
+    "# transparent=OK,\n",
+    "# black_edges=OK,\n",
+    "# collapse=OK,\n",
+    "# reset_camera=OK,\n",
+    "# clip_slider_0=OK,\n",
+    "# clip_slider_1=OK,\n",
+    "# clip_slider_2=OK,\n",
+    "# clip_normal_0=OK,\n",
+    "# clip_normal_1=OK,\n",
+    "# clip_normal_2=OK,\n",
+    "# clip_intersection=OK,\n",
+    "# clip_planes=OK,\n",
+    "# clip_object_colors=OK,\n",
+    "# position=OK,\n",
+    "# quaternion=OK,\n",
+    "# target=OK,\n",
+    "# zoom=OK,\n",
+    "# zoom_speed=OK,\n",
+    "# pan_speed=OK,\n",
+    "# rotate_speed=OK,\n",
+    "#     timeit=FAIL,\n",
+    "# debug=OK,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2703227-2e42-4a6b-a9cc-ee1bb38b3f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3192131-2afc-49de-b653-af6282ce50a2",
+   "id": "010ede0a-ffbf-4652-be5d-70923ce2df28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.cad_width, cv.widget.height"
+    "get_sidecars()"
    ]
   },
   {
@@ -121,6 +172,37 @@
    "outputs": [],
    "source": [
     "cv2.widget.cad_width, cv2.widget.height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6871a8de-a3d5-4dc6-8569-ac2c69087f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.cad_width, cv.widget.height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4915f84e-bb04-4aa5-b305-75cf2d7de7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.close()\n",
+    "cv2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18009708-6fb4-480c-9bf0-f63ff6063775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_sidecars()"
    ]
   },
   {
@@ -135,9 +217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78fdf9c0-e275-4ded-be2c-a16edc6c0bc0",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = \"boxes\"\n",
@@ -151,7 +231,7 @@
     "    cad_width=750,\n",
     "    tree_width=250,\n",
     "    height=500,\n",
-    "    glass=False,\n",
+    "    glass=True,\n",
     "    debug=False,\n",
     "    collapse=\"1\",\n",
     "    theme=\"browser\",\n",
@@ -232,7 +312,7 @@
     "cv1 = open_viewer(\n",
     "    title=\"CVW 1\",\n",
     "    anchor=\"split-right\",\n",
-    "    cad_width=700,\n",
+    "    cad_width=750,\n",
     "    tree_width=250,\n",
     "    height=525,\n",
     "    glass=True\n",
@@ -249,8 +329,6 @@
     "name = \"hexapod\"\n",
     "cv1.add_shapes(\n",
     "    objects[name], \n",
-    "    cad_width=700,\n",
-    "    height=600,\n",
     "    #tools=False,\n",
     "    #ortho=False,\n",
     "    control=\"trackball\",\n",
@@ -267,12 +345,11 @@
     "    ambient_intensity=1.0,\n",
     "    direct_intensity=1.1,\n",
     "\n",
-    "#    reset_camera=True,\n",
     "#    position = (865.4844022079983, -276.23389988421786, 335.21716816984906),\n",
     "#    quaternion = (0.43557639340677845, 0.3648618806188253, 0.4409953598863984, 0.6947460731351442),\n",
-    "    zoom=0.8,\n",
+    "#    zoom=0.8,\n",
     "    timeit=False,\n",
-    "\n",
+    "    reset_camera=\"reset\",\n",
     "    zoom_speed=0.5,\n",
     "    pan_speed=0.5,\n",
     "    rotate_speed=1.0,\n",
@@ -281,16 +358,6 @@
     "    explode=True,\n",
     "    \n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cee24076-bb37-4092-b32f-e0acf8eebf81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position"
    ]
   },
   {
@@ -306,9 +373,19 @@
     "    title=\"CVW 1\",\n",
     "    cad_width=800,\n",
     "    height=600,\n",
-    "    glass=False,\n",
+    "    glass=True,\n",
     "    up=\"Y\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790ea6a8-e7cf-4009-b4c7-1f870c953619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv1.close()"
    ]
   },
   {
@@ -330,9 +407,7 @@
     "cv2 = show(\n",
     "    objects[name], \n",
     "    title=\"CVW 2\",\n",
-    "    anchor=\"split-right\",\n",
-    "    height=600,\n",
-    "    cad_width=800,\n",
+    "    anchor=\"split-top\",\n",
     "    \n",
     "    ortho=False,\n",
     "    control=\"orbit\",\n",
@@ -353,21 +428,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "330b67be-198d-4a69-b759-19a3237999e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv1.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "00b21406-2294-4e27-ad99-24a12b5bef25",
    "metadata": {},
    "outputs": [],
    "source": [
     "get_sidecars()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "330b67be-198d-4a69-b759-19a3237999e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.close()"
    ]
   },
   {
@@ -379,8 +454,9 @@
    "source": [
     "name = \"box1\"\n",
     "show(    \n",
-    "    objects[name], \n",
-    "    reset_camera=Camera.CENTER,\n",
+    "    objects[name],\n",
+    "    glass=False,\n",
+    "    reset_camera=\"reset\",\n",
     "    title=\"CVW 2\"\n",
     ")"
    ]
@@ -396,9 +472,9 @@
     "cv = show(\n",
     "    objects[name], \n",
     "    title=\"CVW 2\",\n",
-    "    collapse=Collapse.ROOT,\n",
+    "    collapse=\"R\",\n",
     "    glass=True,\n",
-    "    reset_camera=Camera.CENTER\n",
+    "    reset_camera=\"reset\"\n",
     ")"
    ]
   },
@@ -455,23 +531,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed80cfe-4ea1-4fad-a6c7-47893bc0f25c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hexapod = objects[\"hexapod\"]\n",
-    "hexapod[\"shapes\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f1639c0f-10af-4414-9c2e-b87e765afbbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.close()\n",
-    "cv2.disposed"
+    "cv.close()\n",
+    "cv.disposed"
    ]
   },
   {
@@ -514,7 +579,7 @@
     "    objects[name], \n",
     "    height=600,\n",
     "    cad_width=800,\n",
-    "    reset_camera=True,\n",
+    "    reset_camera=\"reset\",\n",
     "    debug=True\n",
     ")"
    ]
@@ -529,23 +594,7 @@
     "name = \"faces\"\n",
     "cv2 = show(\n",
     "    objects[name], \n",
-    "    height=600,\n",
-    "    cad_width=800,    \n",
-    "    title=\"CVW 2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af6e1d01-f96e-4669-955a-4825962280c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"single_vertices\"\n",
-    "cv2 = show(\n",
-    "    objects[name], \n",
-    "    reset_camera=\"reset\",\n",
+    "    cad_width=1000,    \n",
     "    title=\"CVW 2\"\n",
     ")"
    ]
@@ -645,13 +694,12 @@
     "cv4 = show(\n",
     "    objects[name],\n",
     "\n",
-    "    cad_width=600,\n",
+    "    cad_width=750,\n",
     "    height=400,\n",
     "    glass=True,\n",
-    "    collapse=2,\n",
+    "    collapse=\"C\",\n",
     "    pinning=True\n",
-    ")\n",
-    "cv4.remove_ui_elements([\"axes\", \"axes0\", \"grid\", \"ortho\", \"more\", \"help\"])"
+    ")"
    ]
   },
   {
@@ -675,10 +723,9 @@
     "\n",
     "cv1 = show(\n",
     "    objects[name], \n",
-    "    height=600,\n",
     "    cad_width=800,\n",
     "    title=\"Trackball\",\n",
-    "    reset_camera=True,\n",
+    "    reset_camera=\"reset\",\n",
     "    debug=True\n",
     ")"
    ]
@@ -691,7 +738,7 @@
    "outputs": [],
    "source": [
     "cv1.position=(96.5764, -1.7474, 37.7064)\n",
-    "cv1.quaternion=(0.4059, 0.3049, 0.7413, 0.4389)\n",
+    "cv1.quaternion=(0.338779, 0.378157, 0.6416827, 0.574865)\n",
     "cv1.zoom=0.6\n",
     "cv1.target=(6.9493, -11.6226, -12.2272)"
    ]
@@ -759,7 +806,6 @@
    "source": [
     "cv = open_viewer(\n",
     "    title=\"Orbit\",\n",
-    "    cad_width=700,\n",
     "    height=525,\n",
     ")"
    ]
@@ -787,7 +833,7 @@
     "    control=\"orbit\",\n",
     "    position=(-43.3, 73.7, -39.3),\n",
     "    zoom=0.5,\n",
-    "    reset_camera=True,\n",
+    "    reset_camera=\"reset\",\n",
     ")\n",
     "cv.position, cv.quaternion, cv.target, cv.zoom"
    ]
@@ -801,8 +847,7 @@
    "source": [
     "cv.position = (85, 25, 55)\n",
     "cv.target = (0,0,0)\n",
-    "cv.zoom = 0.8\n",
-    "cv.position, cv.quaternion, cv.zoom"
+    "cv.zoom = 0.8"
    ]
   },
   {
@@ -812,7 +857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.position, cv.quaternion, cv.target, cv.zoom"
+    "cv.position, cv.target, cv.zoom"
    ]
   },
   {
@@ -831,6 +876,16 @@
    "outputs": [],
    "source": [
     "cv.widget.quaternion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f08e8a-8376-4045-9f6c-a87b20aeb466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_sidecars()"
    ]
   },
   {
@@ -922,6 +977,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ee1c71a-d486-4315-9cfb-103539fa0ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_sidecars()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
    "metadata": {},
@@ -932,13 +997,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b7f205ad-ae13-4577-8461-b861352064cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = show(\n",
+    "    objects[\"hexapod\"],\n",
+    "    title=\"Examples\",\n",
+    "    collapse=\"E\",\n",
+    "    debug=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "032a0f61-2e70-4ab6-8f94-44495c41af2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "cv.update_states({\n",
-    "    '/bottom/bottom_0': (1,0),\n",
-    "    '/bottom/top/top_0': [0,1],\n",
+    "    '/hexapod/bottom': (1,0),\n",
+    "    '/hexapod/top': [0,1],\n",
     "})"
    ]
   },
@@ -950,8 +1030,8 @@
    "outputs": [],
    "source": [
     "cv.update_states({\n",
-    "    '/bottom/bottom_0': (1,1),\n",
-    "    '/bottom/top/top_0': [1,1],\n",
+    "    '/hexapod/bottom': (1,1),\n",
+    "    '/hexapod/top': [1,1],\n",
     "})"
    ]
   },
@@ -962,7 +1042,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.collapse = 2"
+    "cv.widget.collapse = \"C\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f0daa6-9d4e-44ee-8f6a-c72b01a18296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.collapse = \"R\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd240a0-6477-4f81-8199-0516af466846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.collapse = \"E\""
    ]
   },
   {
@@ -972,7 +1072,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.collapse = 1"
+    "cv.widget.collapse = \"1\""
    ]
   },
   {
@@ -982,8 +1082,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.ambient_intensity = 0.9\n",
-    "cv.direct_intensity = 0.5"
+    "cv.ambient_intensity = 1.2\n",
+    "cv.direct_intensity = 1.5"
    ]
   },
   {
@@ -1004,7 +1104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ec = cv.default_edge_color"
+    "ec = cv.default_edgecolor"
    ]
   },
   {
@@ -1014,7 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.default_edge_color = \"#ff0000\""
+    "cv.default_edgecolor = \"#ff0000\""
    ]
   },
   {
@@ -1024,7 +1124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.default_edge_color = ec"
+    "cv.default_edgecolor = ec"
    ]
   },
   {
@@ -1252,7 +1352,7 @@
     "    objects[name], \n",
     "    control=\"trackball\",\n",
     "    title=\"Examples\",\n",
-    "    reset_camera=True,\n",
+    "    reset_camera=\"reset\",\n",
     "    glass=False\n",
     ")"
    ]
@@ -1305,7 +1405,7 @@
     "    objects[name], \n",
     "    control=\"orbit\",\n",
     "    title=\"Examples\",\n",
-    "    reset_camera=True\n",
+    "    reset_camera=\"reset\"\n",
     ")"
    ]
   },
@@ -1333,6 +1433,16 @@
     "    cv.rotate_left(-1)\n",
     "    cv.rotate_up(-3)\n",
     "    time.sleep(0.05)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74a643c-c021-46ff-ab5c-27548a66cff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_sidecars()"
    ]
   },
   {
@@ -1462,22 +1572,6 @@
    "source": [
     "close_sidecars()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db926d1b-8097-487b-b8e4-74f86f7774ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e9a97cd-4820-4216-a132-501cfed952a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1496,7 +1590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
