fix state updates for leaves

--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -1018,7 +1018,8 @@
    "source": [
     "cv.update_states({\n",
     "    '/hexapod/bottom': (1,0),\n",
-    "    '/hexapod/top': [0,1],\n",
+    "    '/hexapod/top': [0,0],\n",
+    "    '/hexapod/left_front_leg/upper_leg': [0,0],\n",
     "})"
    ]
   },
@@ -1032,6 +1033,7 @@
     "cv.update_states({\n",
     "    '/hexapod/bottom': (1,1),\n",
     "    '/hexapod/top': [1,1],\n",
+    "    '/hexapod/left_front_leg/upper_leg': [1,1],\n",
     "})"
    ]
   },
