--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -51,9 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = \"boxes\"\n",
@@ -68,6 +66,16 @@
     "    cad_width=700,\n",
     "    debug=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e487b2fc-7ebc-4c0a-9fde-399f695988b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.selectedShapeIDs, cv.widget.activeTool"
    ]
   },
   {
@@ -1577,22 +1585,14 @@
   }
  ],
  "metadata": {
+  "language_info": {
+   "name": "python",
+   "pygments_lexer": "ipython3"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
   }
  },
  "nbformat": 4,
