--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -71,6 +71,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4e25cfc-b9d3-489f-9975-31a4cf5e3e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "264a73d0-a13d-4947-b760-60ff104ce772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e487b2fc-7ebc-4c0a-9fde-399f695988b2",
    "metadata": {},
    "outputs": [],
@@ -1585,14 +1605,22 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python",
-   "pygments_lexer": "ipython3"
-  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
