--- a/notebooks/Tests-and-demos.ipynb
+++ b/notebooks/Tests-and-demos.ipynb
@@ -50,6 +50,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f1137c32-145c-45d5-95d8-0199cc4b6dc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = open_viewer(\"Test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b5da9e3e-b160-4db8-b683-da60aacd9938",
    "metadata": {},
    "outputs": [],
@@ -67,6 +77,14 @@
     "    debug=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e009e75-cb03-4e34-875f-df4b662f27c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
